@@ -4,6 +4,8 @@ VERSION 0.0.3
 In progress...
 
 + Research projects can now show report screen when finished
++ Research projects can now spawn new projects when they are finished
+* Refactored world generation, split into multiple classes
 
 ======================================================
 VERSION 0.0.2
